[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sonidos_ui/win.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sonidos_ui/click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/img/logo-Malefico/logo_resized.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/jugar_button.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/jugar_button_press.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/acerca_de_button.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/acerca_de_button_press.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/salir_button.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/salir_button_press.png" type="Texture" id=10]
[ext_resource path="res://assets/img/fondo_juego.png" type="Texture" id=11]

[node name="menu" type="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1281.0
margin_bottom = 747.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="sonidos_ui" type="Node" parent="." index="0"]

_sections_unfolded = [ "Pause" ]

[node name="musica" type="Node" parent="." index="1"]

_sections_unfolded = [ "Pause" ]

[node name="intro_la_yumba" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="click" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="spacer" type="Control" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 250.0
margin_bottom = 746.0
rect_min_size = Vector2( 250, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="." index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 254.0
margin_right = 1004.0
margin_bottom = 746.0
rect_min_size = Vector2( 680, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false

[node name="title screen" type="VBoxContainer" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 750.0
margin_bottom = 746.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 0

[node name="spacer4" type="Control" parent="CenterContainer/title screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 750.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="emblem" type="TextureRect" parent="CenterContainer/title screen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 750.0
margin_bottom = 361.0
rect_min_size = Vector2( 750, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="spacer2" type="Control" parent="CenterContainer/title screen" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 365.0
margin_right = 750.0
margin_bottom = 390.0
rect_min_size = Vector2( 0, 25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="CenterContainer/title screen" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 394.0
margin_right = 242.0
margin_bottom = 746.0
rect_min_size = Vector2( 200, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 0

[node name="jugar" type="TextureButton" parent="CenterContainer/title screen/buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 146.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="acerca" type="TextureButton" parent="CenterContainer/title screen/buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 242.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="salir" type="TextureButton" parent="CenterContainer/title screen/buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 208.0
margin_right = 113.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="spacer3" type="Control" parent="CenterContainer/title screen/buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 312.0
margin_right = 242.0
margin_bottom = 352.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="expander" type="Control" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1008.0
margin_right = 1280.0
margin_bottom = 746.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="background" type="Sprite" parent="." index="7"]

show_behind_parent = true
light_mask = 528947
position = Vector2( 1.45984, -1.50838 )
scale = Vector2( 1.70911, 1.47005 )
texture = ExtResource( 11 )
centered = false

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[connection signal="pressed" from="CenterContainer/title screen/buttons/jugar" to="." method="_on_jugar_pressed"]

[connection signal="pressed" from="CenterContainer/title screen/buttons/acerca" to="." method="_on_acerca_pressed"]

[connection signal="pressed" from="CenterContainer/title screen/buttons/salir" to="." method="_on_salir_pressed"]


